<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <include
            android:id="@+id/view_top"
            layout="@layout/view_toplayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/group_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_creategroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/Home_creategroup"
                    android:textAppearance="@style/Text.Regular_16_grey"
                    app:layout_constraintBottom_toBottomOf="@id/home_division"
                    app:layout_constraintEnd_toStartOf="@id/home_division"
                    app:layout_constraintTop_toTopOf="@id/home_division" />

                <TextView
                    android:id="@+id/home_division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    android:textAppearance="@style/Text.Regular_16_white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_participategroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/Home_participategroup"
                    android:textAppearance="@style/Text.Regular_16_grey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/home_division"
                    app:layout_constraintTop_toTopOf="@id/home_division" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="MY GROUPS"
                android:textAppearance="@style/Text.Bold_18_Blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_group"
                android:layout_marginTop="22dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/no_group_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_top"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_emptygroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="226dp"
                android:text="@string/Home_error_empty_group"
                android:textAppearance="@style/Text.Bold_18_Main" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_creategroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_round_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_emptygroup"
                android:text="@string/Home_Button_createnewgroup"
                android:textAppearance="@style/Text.Bold_16_Main"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="44dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_round"
                app:layout_constraintTop_toBottomOf="@id/btn_creategroup"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="그룹 참가하기"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/Text.Bold_16_Blue" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/group_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_top_48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="200dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_group_info" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
