<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/groupcode"
            android:textAppearance="@style/Text.Bold_16_Main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/view_round_main_filled"
            android:backgroundTint="@color/background_dark"
            android:paddingVertical="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_top">

            <TextView
                android:id="@+id/tv_sharegroupcode_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharegroupcode"
                android:textAppearance="@style/Text.Bold_16_Blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginVertical="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sharegroupcode_title">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_first"
                    android:layout_width="57dp"
                    android:layout_height="55dp"
                    android:background="@drawable/view_round_main"
                    android:elevation="10dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cv_second"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1"
                        android:textColor="@color/font_black"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_second"
                    android:layout_width="57dp"
                    android:layout_height="55dp"
                    android:background="@drawable/view_round_main"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/cv_first"
                    app:layout_constraintEnd_toStartOf="@id/cv_third"
                    app:layout_constraintStart_toEndOf="@id/cv_first"
                    app:layout_constraintTop_toTopOf="@id/cv_first">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1"
                        android:textColor="@color/font_black"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_third"
                    android:layout_width="57dp"
                    android:layout_height="55dp"
                    android:background="@drawable/view_round_main"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/cv_first"
                    app:layout_constraintEnd_toStartOf="@id/cv_fourth"
                    app:layout_constraintStart_toEndOf="@id/cv_second"
                    app:layout_constraintTop_toTopOf="@id/cv_first">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1"
                        android:textColor="@color/font_black"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_fourth"
                    android:layout_width="57dp"
                    android:layout_height="55dp"
                    android:background="@drawable/view_round_main"
                    android:elevation="5dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/cv_first"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_third"
                    app:layout_constraintTop_toTopOf="@id/cv_first">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1"
                        android:textColor="@color/font_black"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_inner"
            android:background="@drawable/view_round_15_main"
            android:layout_marginTop="40dp"
            android:text="@string/string_confirm"
            android:textAppearance="@style/Text.Bold_16_Main" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
